# LanRec

./: CMakeLists.txt  Readme.md  c.gr  main.cpp
LanRec/: CMakeLists.txt  automatonPushDown.cpp  automatonPushDown.h  grammar.cpp  grammarToAutomaton.h  lexer.cpp  parser.h
LanRec/AutomatonPD/: automatonPushDown.cpp  automatonPushDown.h
LanRec/Convert/: grammarToAutomaton.h
LanRec/Grammar/: grammar.cpp  grammar.h  grammarDerivation.cpp  grammarDerivation.h  grammarTree.cpp  grammarTree.h
LenRec/: CMakeLists.txt  Grammar.h  automatonPushDown.cpp  automatonPushDown.h  lexer.cpp  lexer.h
